fix the layout problem

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ body {
 
 body {
   color: #000066;
-  line-height: 1.3; }
+  line-height: 1.2; }
 
 .introduction__title {
   font-size: 4rem; }
@@ -123,11 +123,11 @@ body {
       margin-right: 6rem; }
 
 .header {
-  height: 100vh;
   background-image: linear-gradient(to right bottom, rgba(242, 242, 242, 0.5), rgba(128, 255, 255, 0.8)), url(../img/background-1.jpeg);
   background-size: cover;
   background-position: top;
-  position: relative; }
+  position: relative;
+  padding: 30rem 0; }
   .header__text-box {
     position: absolute;
     text-align: center;
@@ -139,15 +139,13 @@ body {
     border-radius: 50%; }
 
 .section-projects {
-  height: 100vh;
   background-image: linear-gradient(to right bottom, rgba(242, 242, 242, 0.5), rgba(128, 255, 255, 0.8)), url(../img/background-2.jpeg);
   background-size: cover;
   background-position: top;
   position: relative;
-  padding: 2rem 2rem; }
+  padding: 8rem 2rem; }
 
 .section-education {
-  height: 100vh;
   background-image: linear-gradient(to right bottom, rgba(242, 242, 242, 0.5), rgba(128, 255, 255, 0.8)), url(../img/background-3.jpeg);
   background-size: cover;
   background-position: top;
@@ -155,7 +153,6 @@ body {
   padding: 5rem 0; }
 
 .section-experience {
-  height: 100vh;
   background-image: linear-gradient(to right bottom, rgba(242, 242, 242, 0.5), rgba(128, 255, 255, 0.8)), url(../img/background-4.jpeg);
   background-size: cover;
   background-position: top;
@@ -163,9 +160,9 @@ body {
   padding: 5rem 0; }
 
 .section-contact {
-  height: 100vh;
   background-image: linear-gradient(to right bottom, rgba(242, 242, 242, 0.5), rgba(128, 255, 255, 0.8)), url(../img/background-5.jpeg);
   background-size: cover;
   background-position: top;
   position: relative;
-  padding: 5rem 0; }
+  padding: 5rem 0;
+  padding-bottom: 23rem; }
