--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,6 +1,6 @@
 body{
     color: #000066;
-    line-height: 1.3;
+    line-height: 1.2;
 }
 
 .introduction{
