--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,9 +1,9 @@
 .header{
-    height: 100vh;
     background-image: linear-gradient(to right bottom, rgba($color-silver, 0.5), rgba($color-blue-light, 0.8)), url(../img/background-1.jpeg);
     background-size: cover;
     background-position: top;
     position: relative;
+    padding: 30rem 0;
 
     &__text-box{
         position: absolute;
