--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,14 +1,12 @@
 .section-projects{
-    height: 100vh;
     background-image: linear-gradient(to right bottom, rgba($color-silver, 0.5), rgba($color-blue-light, 0.8)), url(../img/background-2.jpeg);
     background-size: cover;
     background-position: top;
     position: relative;
-    padding: 2rem 2rem;
+    padding: 8rem 2rem;
 }
 
 .section-education{
-    height: 100vh;
     background-image: linear-gradient(to right bottom, rgba($color-silver, 0.5), rgba($color-blue-light, 0.8)), url(../img/background-3.jpeg);
     background-size: cover;
     background-position: top;
@@ -17,7 +15,6 @@
 }
 
 .section-experience{
-    height: 100vh;
     background-image: linear-gradient(to right bottom, rgba($color-silver, 0.5), rgba($color-blue-light, 0.8)), url(../img/background-4.jpeg);
     background-size: cover;
     background-position: top;
@@ -26,10 +23,10 @@
 }
 
 .section-contact{
-    height: 100vh;
     background-image: linear-gradient(to right bottom, rgba($color-silver, 0.5), rgba($color-blue-light, 0.8)), url(../img/background-5.jpeg);
     background-size: cover;
     background-position: top;
     position: relative;
     padding: 5rem 0;
+    padding-bottom: 23rem;
 }
